--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,4 +1,6 @@
-<div class="jumbotron  animated fadeIn">
+
+<div class="container">
+<div class="jumbotron animated fadeIn">
   <h3>Why?</h3>
   <p class="lead">
     This is a quiz game made as a school project in the Information Architecture program at Malmö Universitet.
@@ -19,4 +21,5 @@
   <img src="/assets/redPandaa.png" alt="My"       class="col col-sm-6 col-md-3">
   <img src="/assets/uggla.png" alt="Viktor"       class="col col-sm-6 col-md-3">
   </div>
+</div>
 </div>
