--- a/quiz/src/app/intro/intro.component.css
+++ b/quiz/src/app/intro/intro.component.css
@@ -1,29 +1,3 @@
-.btn{
-  display: block;
-  padding: 25px;
-  margin: 25px;
-  font-weight: bold;
-}
-.jumbotron{
-  background-color: rgba(0, 0, 0, 0.4);
-  width: 80%;
-  float: none;
-  margin: 0 auto;
-  margin-top: 100px
-}
-
-.btn-orange{
-  background-color: #DE652E;
-  color: white;
-}
-.btn-orange:hover{
-  background-color: #DE792E;
-}
-
-.btn-purple{
-  background-color: #8A1D95;
-  color: white;
-}
-.btn-purple:hover{
-  background-color: #A803C5;
+.btnOne{
+  margin-bottom: 20px;
 }
