--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <figure>
   <img src="/assets/logo.png" alt="logo">
 </figure>
-<div class="jumbotron col-lg-6">
+<div class="jumbotron col-lg-6 animated fadeIn">
   <div class="row">
     <a class="btn btn-orange btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/intro" role="button">Start Game</a>
     <a class="btn btn-purple btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/scoreboard" role="button">Scoreboard</a>
