--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -19,9 +19,7 @@
   <div class="row">
 
     <!-- Button trigger modal -->
-<button type="button" class="btn btn-purple" data-toggle="modal" data-target="#exampleModal">
-  Clear Scoreboard
-</button>
+<button type="button" class="btn btn-lg btn-purple" data-toggle="modal" data-target="#exampleModal">Clear Scoreboard</button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -35,7 +33,7 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-red" (click)="deleteScore = true; clearScoreboard(deleteScore)" data-dismiss="modal">Clear</button>
-       <button type="button" class="btn btn-blue" data-dismiss="modal">Cancel</button>      
+       <button type="button" class="btn btn-blue" data-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
