--- a/quiz/src/app/quiz/quiz.component.css
+++ b/quiz/src/app/quiz/quiz.component.css
@@ -29,7 +29,7 @@
 }
 
 button{
-  width:100%; 
+  width:100%;
 }
 
 
@@ -57,6 +57,10 @@ p{
   margin-bottom: 20px;
 }
 
+.removeSideScroll{
+  max-width: 100%;
+  overflow: hidden;
+}
 
 /*
 
