--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -1,5 +1,6 @@
 <!-- SKRIV FRÅGE-HTML HÄR -->
-<div *ngIf="showGame" [ngClass]="showGameClass">
+<div class="removeSideScroll" *ngIf="showGame">
+  <div [ngClass]="showGameClass">
   <div class="container">
     <div class="row">
       <div *ngIf="showP1P2">
@@ -18,6 +19,7 @@
       <audio id="correctSound" src="./assets/right.wav"></audio>
       <audio id="wrongSound" src="./assets/wrong.wav"></audio>
     </div>
+  </div>
   </div>
 </div>
 
