--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -12,7 +12,7 @@
     with different difficulty levels.
   </p>
   <p class="lead">
-    The team behind it is:
+    The team behind Let's QUIZ is:
   </p>
 
   <div class="row iconRow">
