--- a/quiz/src/app/quiz-setup/quiz-setup.component.css
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.css
@@ -3,7 +3,7 @@ h3{
   text-align: center
 }
 .btn{
-  display: block;
-  margin-bottom: 20px;
-  font-weight: bold;
+    float: 0;
+    margin: 0 auto;
+    margin-bottom: 12px;
 }
