--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -1,9 +1,9 @@
 
 <div *ngIf="showMode" class="jumbotron col-lg-6 animated fadeIn">
-  
+
     <h3 class="text-center">Choose mode: </h3>
-    <button (click)="mode='1'; setMode(mode)" class="btn btn-orange btn-lg btnOne">One player</button>
-    <button (click)="mode='2'; setMode(mode)" class="btn btn-purple btn-lg">Multiplayer</button>
+    <button (click)="mode='1'; setMode(mode)" class="btn btn-lg btn-block btn-orange btn-lg offset-2 qBtn">One player</button>
+    <button (click)="mode='2'; setMode(mode)" class="btn btn-lg btn-block btn-purple btn-lg offset-2 qBtn">Multiplayer</button>
 
 </div>
 
