--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -3,8 +3,8 @@
 <div class="jumbotron animated fadeIn">
   <h3>Why?</h3>
   <p class="lead">
-    This is a quiz game made as a school project in the Information Architecture program at Malmö Universitet.
-    This project was made for the course Webbapplikationer in 2nd year.
+    This is a quiz game made as a school project in the Information Architecture program at Malmö University.
+    This project was made for the course Cross-platform Applications with Web Technologies in 2nd year.
   </p>
   <h3>How?</h3>
   <p class="lead">
