--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -14,8 +14,8 @@
       <p [innerHTML]="currentQuestion"></p>
     </div>
     <div class="row">
-      <button (click)="buttonAnswer = 'True'; clickTrueFalse(buttonAnswer)" class="btn btn-green btn-lg col-sm-12 col-md-4 offset-md-1">True</button>
-      <button (click)="buttonAnswer = 'False'; clickTrueFalse(buttonAnswer)" class="btn btn-red btn-lg col-sm-12 col-md-4 offset-md-2">False</button>
+      <button [disabled]="buttonActive" (click)="buttonAnswer = 'True'; clickTrueFalse(buttonAnswer)" class="btn btn-green btn-lg col-sm-12 col-md-4 offset-md-1">True</button>
+      <button [disabled]="buttonActive" (click)="buttonAnswer = 'False'; clickTrueFalse(buttonAnswer)" class="btn btn-red btn-lg col-sm-12 col-md-4 offset-md-2">False</button>
       <audio id="correctSound" src="./assets/right.wav"></audio>
       <audio id="wrongSound" src="./assets/wrong.wav"></audio>
     </div>
