--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -1,5 +1,10 @@
-
 <div *ngIf="showMode" class="jumbotron col-lg-6 animated fadeIn">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Quiz</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Mode</li>
+        </ol>
+    </nav>
 
     <h3 class="text-center">Choose mode: </h3>
     <button (click)="mode='1'; setMode(mode)" class="btn btn-lg btn-block btn-orange btn-lg offset-2 qBtn">One player</button>
@@ -9,6 +14,13 @@
 
 
 <div *ngIf="showCategory" class="jumbotron col-lg-6 animated fadeIn">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Quiz</a></li>
+            <li class="breadcrumb-item"><a href="#">One Player</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Category</li>
+        </ol>
+    </nav>
     <!-- SKRIV KATEGORI HTML HÄR -->
     <h3>Choose category: </h3>
     <button (click)="category='9'; setCategory(category)" class="btn btn-blue btn-lg btn-block">General</button>
@@ -21,6 +33,14 @@
 
 
 <div *ngIf="showDifficulty" class="jumbotron col-lg-6 animated fadeIn">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Quiz</a></li>
+            <li class="breadcrumb-item"><a href="#">One Player</a></li>
+            <li class="breadcrumb-item"><a href="#">Sport</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Difficulty</li>
+        </ol>
+    </nav>
     <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
     <h3>Choose difficulty:</h3>
     <button *ngIf="showHardButton" (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-red btn-lg btn-block">Hard</button>
