--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -1,4 +1,4 @@
-<div class="container jumbotron col-lg-6 animated fadeIn">
+<div class="container jumbotron col-lg-6">
 
   <div class="row col-lg-8 offset-lg-2">
     <table class="table table-hover">
@@ -19,7 +19,6 @@
   <div class="row">
 
     <!-- Button trigger modal -->
-<button type="button" class="btn btn-lg btn-purple" data-toggle="modal" data-target="#exampleModal">Clear Scoreboard</button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
