--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -19,6 +19,7 @@
   <div class="row">
 
     <!-- Button trigger modal -->
+<button type="button" class="btn btn-lg btn-outline-danger" data-toggle="modal" data-target="#exampleModal">Clear Scoreboard</button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
