--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="showMode" class="jumbotron col-lg-6 animated fadeIn">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Quiz</a></li>
+            <li class="breadcrumb-item">Quiz</li>
             <li class="breadcrumb-item active" aria-current="page">Mode</li>
         </ol>
     </nav>
@@ -16,8 +16,8 @@
 <div *ngIf="showCategory" class="jumbotron col-lg-6 animated fadeIn">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Quiz</a></li>
-            <li class="breadcrumb-item"><a href="#">One Player</a></li>
+            <li class="breadcrumb-item">Quiz></li>
+            <li class="breadcrumb-item">{{ breadPlayer }}</li>
             <li class="breadcrumb-item active" aria-current="page">Category</li>
         </ol>
     </nav>
@@ -36,8 +36,8 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Quiz</a></li>
-            <li class="breadcrumb-item"><a href="#">One Player</a></li>
-            <li class="breadcrumb-item"><a href="#">Sport</a></li>
+            <li class="breadcrumb-item">{{ breadPlayer }}</li>
+            <li class="breadcrumb-item">{{ breadCategory }}</li>
             <li class="breadcrumb-item active" aria-current="page">Difficulty</li>
         </ol>
     </nav>
