--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -16,7 +16,7 @@
 <div *ngIf="showCategory" class="jumbotron col-lg-6 animated fadeIn">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item">Quiz></li>
+            <li class="breadcrumb-item">Quiz</li>
             <li class="breadcrumb-item">{{ breadPlayer }}</li>
             <li class="breadcrumb-item active" aria-current="page">Category</li>
         </ol>
