--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -28,7 +28,7 @@
     <button (click)="category='23'; setCategory(category)" class="btn btn-purple btn-lg btn-block">History</button>
     <button (click)="category='27'; setCategory(category)" class="btn btn-green btn-lg btn-block">Animals</button>
     <button (click)="category='18'; setCategory(category)" class="btn btn-red btn-lg btn-block">Sci - Computers</button>
-    <button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block">Cartoons</button>
+    <button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block">Starwars</button>
 </div>
 
 
