--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -1,11 +1,13 @@
 <div *ngIf="showMode" class="jumbotron col-lg-6 animated fadeIn">
+
+  <div class="showBreadCrumbs">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">Quiz</li>
             <li class="breadcrumb-item active" aria-current="page">Mode</li>
         </ol>
     </nav>
-
+</div>
     <h3 class="text-center">Choose mode: </h3>
     <button (click)="mode='1'; setMode(mode)" class="btn btn-lg btn-block btn-orange btn-lg offset-2 qBtn">One player</button>
     <button (click)="mode='2'; setMode(mode)" class="btn btn-lg btn-block btn-purple btn-lg offset-2 qBtn">Multiplayer</button>
@@ -14,6 +16,7 @@
 
 
 <div *ngIf="showCategory" class="jumbotron col-lg-6 animated fadeIn">
+  <div class="showBreadCrumbs">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">Quiz</li>
@@ -21,18 +24,20 @@
             <li class="breadcrumb-item active" aria-current="page">Category</li>
         </ol>
     </nav>
+  </div>
     <!-- SKRIV KATEGORI HTML HÄR -->
     <h3>Choose category: </h3>
     <button (click)="category='9'; setCategory(category)" class="btn btn-blue btn-lg btn-block">General</button>
     <button (click)="category='21'; setCategory(category)" class="btn btn-orange btn-lg btn-block">Sports</button>
     <button (click)="category='23'; setCategory(category)" class="btn btn-purple btn-lg btn-block">History</button>
     <button (click)="category='27'; setCategory(category)" class="btn btn-green btn-lg btn-block">Animals</button>
-    <button (click)="category='18'; setCategory(category)" class="btn btn-red btn-lg btn-block">Sci - Computers</button>
+    <button (click)="category='18'; setCategory(category)" class="btn btn-red btn-lg btn-block">Sci-Computers</button>
     <button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block">Starwars</button>
 </div>
 
 
 <div *ngIf="showDifficulty" class="jumbotron col-lg-6 animated fadeIn">
+  <div class="showBreadCrumbs">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Quiz</a></li>
@@ -41,9 +46,10 @@
             <li class="breadcrumb-item active" aria-current="page">Difficulty</li>
         </ol>
     </nav>
+  </div>
     <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
     <h3>Choose difficulty:</h3>
     <button *ngIf="showHardButton" (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-red btn-lg btn-block">Hard</button>
-    <button (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-orange btn-lg btn-block round">Medium</button>
+    <button *ngIf="showMediumButton" (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-orange btn-lg btn-block round">Medium</button>
     <button (click)="difficulty='easy'; setDifficulty(difficulty)" class="btn btn-green btn-lg btn-block round">Easy</button>
 </div>
