Tog bort ogiltig kod

--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="modal-footer">
-    <button type="button" class="btn btn-red" (click)="deleteScore = true; clearScoreboard(deleteScore)" data-dismiss="modal">Clear</button>
+    <button type="button" class="btn btn-red" (click)="clearScoreboard()" data-dismiss="modal">Clear</button>
      <button type="button" class="btn btn-blue" data-dismiss="modal">Cancel</button>
     </div>
   </div>
