--- a/src/app/quiz-setup/quiz-setup.component.html
+++ b/src/app/quiz-setup/quiz-setup.component.html
@@ -39,7 +39,7 @@
   <div class="showBreadCrumbs">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Quiz</a></li>
+            <li class="breadcrumb-item">Quiz</li>
             <li class="breadcrumb-item">{{ breadPlayer }}</li>
             <li class="breadcrumb-item">{{ breadCategory }}</li>
             <li class="breadcrumb-item active" aria-current="page">Difficulty</li>
